# FastSimpleRayTracer

./: CMakeLists.txt  README.md  Renderer.cpp  Renderer.hpp  figures.hpp  lights.hpp  main.cpp  renderer.hpp
